--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -34,8 +34,8 @@
     "read_file = reader(opened_file)\n",
     "\n",
     "hn = list(read_file)\n",
-    "hn_header = hn[0]\n",
-    "hn = hn[1:] # Exclude the header row (column names) from the data set"
+    "hn_header = hn[0] # Contains just the column headers (names)\n",
+    "hn = hn[1:] # The data set cannot be analyzed with the header row in the way"
    ]
   },
   {
@@ -111,7 +111,47 @@
     "- `author`: The username of the person who submitted the post\n",
     "\n",
     "\n",
-    "- `created_at`: The date and time at which the post was submitted"
+    "- `created_at`: The date and time at which the post was submitted\n",
+    "\n",
+    "## Extracting Ask HN and Show HN Posts\n",
+    "\n",
+    "Now, I'm ready to filter the data. Since I'm only concerned with post titles beginning with Ask HN or Show HN, I'll create sub data sets containing just the data for those titles. Once I populate these sub data sets, I'll print the number of posts in each of them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Ask HN posts: 9139\n",
+      "Number of Show HN posts: 10158\n",
+      "Number of other posts: 273822\n"
+     ]
+    }
+   ],
+   "source": [
+    "ask_posts = []\n",
+    "show_posts = []\n",
+    "other_posts = []\n",
+    "\n",
+    "for row in hn:\n",
+    "    title = row[1]\n",
+    "    title = title.lower()\n",
+    "    \n",
+    "    if title.startswith(\"ask hn\"):\n",
+    "        ask_posts.append(row)\n",
+    "    elif title.startswith(\"show hn\"):\n",
+    "        show_posts.append(row)\n",
+    "    else:\n",
+    "        other_posts.append(row)\n",
+    "        \n",
+    "print(\"Number of Ask HN posts:\", len(ask_posts))\n",
+    "print(\"Number of Show HN posts:\", len(show_posts))\n",
+    "print(\"Number of other posts:\", len(other_posts))"
    ]
   }
  ],
