--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -115,24 +115,14 @@
     "\n",
     "## Extracting Ask HN and Show HN Posts\n",
     "\n",
-    "Now, I'm ready to filter the data. Since I'm only concerned with post titles beginning with Ask HN or Show HN, I'll create sub data sets containing just the data for those titles. Once I populate these sub data sets, I'll print the number of posts in each of them."
+    "Now, I'm ready to filter the data. Since I'm only concerned with post titles beginning with Ask HN or Show HN, I'll create sub data sets containing just the data for those titles."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of Ask HN posts: 9139\n",
-      "Number of Show HN posts: 10158\n",
-      "Number of other posts: 273822\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ask_posts = []\n",
     "show_posts = []\n",
@@ -147,11 +137,137 @@
     "    elif title.startswith(\"show hn\"):\n",
     "        show_posts.append(row)\n",
     "    else:\n",
-    "        other_posts.append(row)\n",
-    "        \n",
-    "print(\"Number of Ask HN posts:\", len(ask_posts))\n",
-    "print(\"Number of Show HN posts:\", len(show_posts))\n",
-    "print(\"Number of other posts:\", len(other_posts))"
+    "        other_posts.append(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating the Average Number of Comments for Ask HN and Show HN Posts\n",
+    "\n",
+    "With the Ask HN, Show HN, and other posts separated, I'll explore the first five rows of each list to get a good sense of them and find out exactly how many posts are in each one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ask HN Posts:\n",
+      "\n",
+      "['12578908', 'Ask HN: What TLD do you use for local development?', '', '4', '7', 'Sevrene', '9/26/2016 2:53']\n",
+      "\n",
+      "['12578522', 'Ask HN: How do you pass on your work when you die?', '', '6', '3', 'PascLeRasc', '9/26/2016 1:17']\n",
+      "\n",
+      "['12577908', 'Ask HN: How a DNS problem can be limited to a geographic region?', '', '1', '0', 'kuon', '9/25/2016 22:57']\n",
+      "\n",
+      "['12577870', 'Ask HN: Why join a fund when you can be an angel?', '', '1', '3', 'anthony_james', '9/25/2016 22:48']\n",
+      "\n",
+      "['12577647', 'Ask HN: Someone uses stock trading as passive income?', '', '5', '2', '00taffe', '9/25/2016 21:50']\n",
+      "\n",
+      "Number of rows: 9139\n",
+      "Number of columns: 7\n",
+      "\n",
+      "Show HN Posts:\n",
+      "\n",
+      "['12578335', 'Show HN: Finding puns computationally', 'http://puns.samueltaylor.org/', '2', '0', 'saamm', '9/26/2016 0:36']\n",
+      "\n",
+      "['12578182', 'Show HN: A simple library for complicated animations', 'https://christinecha.github.io/choreographer-js/', '1', '0', 'christinecha', '9/26/2016 0:01']\n",
+      "\n",
+      "['12578098', 'Show HN: WebGL visualization of DNA sequences', 'http://grondilu.github.io/dna.html', '1', '0', 'grondilu', '9/25/2016 23:44']\n",
+      "\n",
+      "['12577991', 'Show HN: Pomodoro-centric, heirarchical project management with ES6 modules', 'https://github.com/jakebian/zeal', '2', '0', 'dbranes', '9/25/2016 23:17']\n",
+      "\n",
+      "['12577142', 'Show HN: Jumble  Essays on the go #PaulInYourPocket', 'https://itunes.apple.com/us/app/jumble-find-startup-essay/id1150939197?ls=1&mt=8', '1', '1', 'ryderj', '9/25/2016 20:06']\n",
+      "\n",
+      "Number of rows: 10158\n",
+      "Number of columns: 7\n",
+      "\n",
+      "Other Posts:\n",
+      "\n",
+      "['12579008', 'You have two days to comment if you want stem cells to be classified as your own', 'http://www.regulations.gov/document?D=FDA-2015-D-3719-0018', '1', '0', 'altstar', '9/26/2016 3:26']\n",
+      "\n",
+      "['12579005', 'SQLAR  the SQLite Archiver', 'https://www.sqlite.org/sqlar/doc/trunk/README.md', '1', '0', 'blacksqr', '9/26/2016 3:24']\n",
+      "\n",
+      "['12578997', 'What if we just printed a flatscreen television on the side of our boxes?', 'https://medium.com/vanmoof/our-secrets-out-f21c1f03fdc8#.ietxmez43', '1', '0', 'pavel_lishin', '9/26/2016 3:19']\n",
+      "\n",
+      "['12578989', 'algorithmic music', 'http://cacm.acm.org/magazines/2011/7/109891-algorithmic-composition/fulltext', '1', '0', 'poindontcare', '9/26/2016 3:16']\n",
+      "\n",
+      "['12578979', 'How the Data Vault Enables the Next-Gen Data Warehouse and Data Lake', 'https://www.talend.com/blog/2016/05/12/talend-and-Â\\x93the-data-vaultÂ\\x94', '1', '0', 'markgainor1', '9/26/2016 3:14']\n",
+      "\n",
+      "Number of rows: 273822\n",
+      "Number of columns: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ask HN Posts:\\n\")\n",
+    "\n",
+    "explore_data(ask_posts, 0, 5, True)\n",
+    "\n",
+    "print(\"\\nShow HN Posts:\\n\")\n",
+    "\n",
+    "explore_data(show_posts, 0, 5, True)\n",
+    "\n",
+    "print(\"\\nOther Posts:\\n\")\n",
+    "\n",
+    "explore_data(other_posts, 0, 5, True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, I'll determine if ask posts or show posts receive more comments on average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Ask HN comments per post: 10\n",
+      "Average Show HN comments per post: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_ask_comments = 0\n",
+    "total_show_comments = 0\n",
+    "\n",
+    "for row in ask_posts:\n",
+    "    num_comments = int(row[4])\n",
+    "    \n",
+    "    total_ask_comments += num_comments\n",
+    "\n",
+    "for row in show_posts:\n",
+    "    num_comments = int(row[4])\n",
+    "    \n",
+    "    total_show_comments += num_comments\n",
+    "\n",
+    "avg_ask_comments = total_ask_comments / len(ask_posts)\n",
+    "avg_show_comments = total_show_comments / len(show_posts)\n",
+    "\n",
+    "print(\"Average Ask HN comments per post:\", round(avg_ask_comments))\n",
+    "print(\"Average Show HN comments per post:\", round(avg_show_comments))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see in the output above, Ask HN posts receive more comments on average by five, while Show HN posts only receive five comments.\n",
+    "\n",
+    "Since ask posts are more likely to receive comments, I'll focus my remaining analysis just on these posts."
    ]
   }
  ],
