--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,49 @@
    "source": [
     "As you can see in the output above, Ask HN posts receive more comments on average by five, while Show HN posts only receive five comments.\n",
     "\n",
-    "Since ask posts are more likely to receive comments, I'll focus my remaining analysis just on these posts."
+    "Since ask posts are more likely to receive comments, I'll focus my remaining analysis just on these posts.\n",
+    "\n",
+    "## Finding the Amount of Ask Posts and Comments by Hour Created\n",
+    "\n",
+    "Next, I'll determine if ask posts created at a certain time are more likely to attract comments. I'll use the following steps to perform this analysis:\n",
+    "\n",
+    "1. Calculate the amount of ask posts created in each hour of the day, along with the number of comments received.\n",
+    "2. Calculate the average number of comments ask posts receive by hour created.\n",
+    "\n",
+    "In this section, I'll tackle the first step — calculating the amount of ask posts and comments by hour created. I'll work with the data in the `created_at` column; I'll calculate the amount of ask posts created per hour, along with the total amount of comments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt\n",
+    "\n",
+    "result_list = []\n",
+    "\n",
+    "for row in ask_posts:\n",
+    "    created_at = row[6]\n",
+    "    n_comments = int(row[4])\n",
+    "    \n",
+    "    result_list.append([created_at, n_comments])\n",
+    "    \n",
+    "counts_by_hour = {}\n",
+    "comments_by_hour = {}\n",
+    "\n",
+    "for row in result_list:\n",
+    "    date = row[0]\n",
+    "    date = dt.datetime.strptime(date, \"%m/%d/%Y %H:%M\")\n",
+    "    hour = date.strftime(\"%H\")\n",
+    "    n_comments = row[1]\n",
+    "    \n",
+    "    if hour not in counts_by_hour:\n",
+    "        counts_by_hour[hour] = 1\n",
+    "        comments_by_hour[hour] = n_comments\n",
+    "    else:\n",
+    "        counts_by_hour[hour] += 1\n",
+    "        comments_by_hour[hour] += n_comments"
    ]
   }
  ],
