--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -311,6 +311,70 @@
     "        counts_by_hour[hour] += 1\n",
     "        comments_by_hour[hour] += n_comments"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculating the Average Number of Comments for Ask HN Posts by Hour\n",
+    "\n",
+    "Now that I've gathered the number of ask posts created during each hour of the day and the corresponding number of comments ask posts created at each hour received, I can calculate the average number of comments for posts created during each hour of the day.\n",
+    "\n",
+    "After completing this task, I'll display the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of comments per post at 02: 11\n",
+      "Average number of comments per post at 01: 7\n",
+      "Average number of comments per post at 22: 9\n",
+      "Average number of comments per post at 21: 9\n",
+      "Average number of comments per post at 19: 7\n",
+      "Average number of comments per post at 17: 9\n",
+      "Average number of comments per post at 15: 29\n",
+      "Average number of comments per post at 14: 10\n",
+      "Average number of comments per post at 13: 16\n",
+      "Average number of comments per post at 11: 9\n",
+      "Average number of comments per post at 10: 11\n",
+      "Average number of comments per post at 09: 7\n",
+      "Average number of comments per post at 07: 7\n",
+      "Average number of comments per post at 03: 8\n",
+      "Average number of comments per post at 23: 7\n",
+      "Average number of comments per post at 20: 9\n",
+      "Average number of comments per post at 16: 8\n",
+      "Average number of comments per post at 08: 9\n",
+      "Average number of comments per post at 00: 8\n",
+      "Average number of comments per post at 18: 8\n",
+      "Average number of comments per post at 12: 12\n",
+      "Average number of comments per post at 04: 10\n",
+      "Average number of comments per post at 06: 7\n",
+      "Average number of comments per post at 05: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_by_hour = []\n",
+    "\n",
+    "for hour in comments_by_hour:\n",
+    "    avg_n_comments = comments_by_hour[hour] / counts_by_hour[hour]\n",
+    "    \n",
+    "    avg_by_hour.append([hour, avg_n_comments])\n",
+    "    \n",
+    "template = \"Average number of comments per post at {hour}: {avg_n_comments}\"\n",
+    "\n",
+    "for avg in avg_by_hour:\n",
+    "    hour = avg[0]\n",
+    "    avg_n_comments = avg[1]\n",
+    "    \n",
+    "    print(template.format(hour = hour, avg_n_comments = round(avg_n_comments))) # Round average for readability"
+   ]
   }
  ],
  "metadata": {
