--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -325,37 +325,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average number of comments per post at 02: 11\n",
-      "Average number of comments per post at 01: 7\n",
-      "Average number of comments per post at 22: 9\n",
-      "Average number of comments per post at 21: 9\n",
-      "Average number of comments per post at 19: 7\n",
-      "Average number of comments per post at 17: 9\n",
-      "Average number of comments per post at 15: 29\n",
-      "Average number of comments per post at 14: 10\n",
-      "Average number of comments per post at 13: 16\n",
-      "Average number of comments per post at 11: 9\n",
-      "Average number of comments per post at 10: 11\n",
-      "Average number of comments per post at 09: 7\n",
-      "Average number of comments per post at 07: 7\n",
-      "Average number of comments per post at 03: 8\n",
-      "Average number of comments per post at 23: 7\n",
-      "Average number of comments per post at 20: 9\n",
-      "Average number of comments per post at 16: 8\n",
-      "Average number of comments per post at 08: 9\n",
-      "Average number of comments per post at 00: 8\n",
-      "Average number of comments per post at 18: 8\n",
-      "Average number of comments per post at 12: 12\n",
-      "Average number of comments per post at 04: 10\n",
-      "Average number of comments per post at 06: 7\n",
-      "Average number of comments per post at 05: 9\n"
+      "Average number of comments per post at 02:00: 11.14\n",
+      "Average number of comments per post at 01:00: 7.41\n",
+      "Average number of comments per post at 22:00: 8.80\n",
+      "Average number of comments per post at 21:00: 8.69\n",
+      "Average number of comments per post at 19:00: 7.16\n",
+      "Average number of comments per post at 17:00: 9.45\n",
+      "Average number of comments per post at 15:00: 28.68\n",
+      "Average number of comments per post at 14:00: 9.69\n",
+      "Average number of comments per post at 13:00: 16.32\n",
+      "Average number of comments per post at 11:00: 8.96\n",
+      "Average number of comments per post at 10:00: 10.68\n",
+      "Average number of comments per post at 09:00: 6.65\n",
+      "Average number of comments per post at 07:00: 7.01\n",
+      "Average number of comments per post at 03:00: 7.95\n",
+      "Average number of comments per post at 23:00: 6.70\n",
+      "Average number of comments per post at 20:00: 8.75\n",
+      "Average number of comments per post at 16:00: 7.71\n",
+      "Average number of comments per post at 08:00: 9.19\n",
+      "Average number of comments per post at 00:00: 7.56\n",
+      "Average number of comments per post at 18:00: 7.94\n",
+      "Average number of comments per post at 12:00: 12.38\n",
+      "Average number of comments per post at 04:00: 9.71\n",
+      "Average number of comments per post at 06:00: 6.78\n",
+      "Average number of comments per post at 05:00: 8.79\n"
      ]
     }
    ],
@@ -367,13 +367,74 @@
     "    \n",
     "    avg_by_hour.append([hour, avg_n_comments])\n",
     "    \n",
-    "template = \"Average number of comments per post at {hour}: {avg_n_comments}\"\n",
+    "template = \"Average number of comments per post at {hour}:00: {avg_n_comments:.2f}\" # Round average for readability\n",
     "\n",
     "for avg in avg_by_hour:\n",
     "    hour = avg[0]\n",
     "    avg_n_comments = avg[1]\n",
     "    \n",
-    "    print(template.format(hour = hour, avg_n_comments = round(avg_n_comments))) # Round average for readability"
+    "    print(template.format(hour=hour, avg_n_comments=avg_n_comments))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting and Printing Values from a List of Lists\n",
+    "\n",
+    "Although the results I need are now there, this format makes it hard to identify the hours with the highest values. I'll finish the analysis by sorting the list of lists and printing the five highest values in a format that's easier to read."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Hours for Ask Posts Comments:\n",
+      "\n",
+      "15:00: 28.68 average comments per post\n",
+      "13:00: 16.32 average comments per post\n",
+      "12:00: 12.38 average comments per post\n",
+      "02:00: 11.14 average comments per post\n",
+      "10:00: 10.68 average comments per post\n"
+     ]
+    }
+   ],
+   "source": [
+    "swap_avg_by_hour = []\n",
+    "\n",
+    "for avg in avg_by_hour:\n",
+    "    hour = avg[0]\n",
+    "    avg_n_comments = avg[1]\n",
+    "    \n",
+    "    swap_avg_by_hour.append([avg_n_comments, hour])\n",
+    "    \n",
+    "sorted_swap = sorted(swap_avg_by_hour, reverse=True)\n",
+    "\n",
+    "print(\"Top 5 Hours for Ask Posts Comments:\\n\")\n",
+    "\n",
+    "template = \"{hour}:00: {avg_n_comments:.2f} average comments per post\" # Round average for readability\n",
+    "\n",
+    "for sorted_avg in sorted_swap[:5]:\n",
+    "    hour = sorted_avg[1]\n",
+    "    avg_n_comments = sorted_avg[0]\n",
+    "    \n",
+    "    print(template.format(hour=hour, avg_n_comments=avg_n_comments))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the output above presents, the best hour for creating a post and having the highest chance of receiving comments is 3:00 in the afternoon. Of course, posting at 1:00 in the afternoon and at 12:00 p.m. are also great hours for having a higher chance at receiving comments.\n",
+    "\n",
+    "However, the time zone for these hours (as well as the rest of the time data in the data set) is U.S. Eastern Time; if you happen to live in a region of the globe that does not pertain to this specific time zone, you can find out what these hours are in your time zone using [The Time Zone Converter](https://www.thetimezoneconverter.com/).\n",
+    "\n",
+    "For example, my time zone is Mountain Standard Time; U.S. Eastern Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) is the best hour of the day for me to create posts in hopes of collecting the most amount of comments."
    ]
   }
  ],
