--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "I'll compare these two types of posts to determine the following:\n",
     "\n",
-    "- Do Ask HN or Show HN receive more comments on average?\n",
+    "- Do Ask HN or Show HN posts receive more comments on average?\n",
     "- Do posts created at a certain time receive more comments on average?\n",
     "\n",
     "## Opening and Exploring the Data\n",
@@ -434,7 +434,18 @@
     "\n",
     "However, the time zone for these hours (as well as the rest of the time data in the data set) is U.S. Eastern Time; if you happen to live in a region of the globe that does not pertain to this specific time zone, you can find out what these hours are in your time zone using [The Time Zone Converter](https://www.thetimezoneconverter.com/).\n",
     "\n",
-    "For example, my time zone is Mountain Standard Time; U.S. Eastern Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) is the best hour of the day for me to create posts in hopes of collecting the most amount of comments."
+    "For example, my time zone is Mountain Standard Time; U.S. Eastern Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) is the best hour of the day for me to create posts in hopes of collecting the most amount of comments.\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "In this project, I managed a data set with thousands of records of posts to Hacker News.\n",
+    "\n",
+    "My goal was to analyze the data to answer the following questions:\n",
+    "\n",
+    "- Do Ask HN or Show HN posts receive more comments on average?\n",
+    "- Do posts created at a certain time receive more comments on average?\n",
+    "\n",
+    "In conclusion, I discovered that Ask HN posts receive more comments on average. Additionally, I found that posts created at 3:00 p.m., 1:00 p.m., and 12:00 p.m. (in that order) receive the most comments on average. However, these times apply specifically to U.S. Eastern Time. In result, these hours may be different depending on what time zone you live in."
    ]
   }
  ],
