--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Hacker News is a site started by the startup incubator [Y Combinator](https://www.ycombinator.com/), where user-submitted stories (known as \"posts\") are voted and commented upon, similar to reddit. Hacker News is extremely popular in technology and startup circles, and posts that make it to the top of Hacker News' listings can get hundreds of thousands of visitors as a result.\n",
     "\n",
-    "I'm specifically interested in posts whose titles begin with either **Ask HN** or **Show HN**. Users submit Ask HN posts to ask the Hacker News community a specific question; Users submit Show HN posts to show the Hacker News community a project, product, or just generally something interesting.\n",
+    "I'm specifically interested in posts whose titles begin with either **Ask HN** or **Show HN**. Users submit Ask HN posts to ask the Hacker News community a specific question; users submit Show HN posts to show the Hacker News community a project, product, or just generally something interesting.\n",
     "\n",
     "I'll compare these two types of posts to determine the following:\n",
     "\n",
@@ -19,7 +19,7 @@
     "\n",
     "## Opening and Exploring the Data\n",
     "\n",
-    "I'll start by opening and reading the data set so that I can begin managing/manipulating it."
+    "To begin working with the data set, I'll start by opening and reading it. I'll also make sure to separate the header row, which is the very first row, from the data set since it only contains the column headers/names &mdash; not real data."
    ]
   },
   {
@@ -34,15 +34,15 @@
     "read_file = reader(opened_file)\n",
     "\n",
     "hn = list(read_file)\n",
-    "hn_header = hn[0] # Contains just the column headers (names)\n",
-    "hn = hn[1:] # The data set cannot be analyzed with the header row in the way"
+    "hn_header = hn[0]\n",
+    "hn = hn[1:]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, to make the data set easier to explore, I'll create a function named `explore_data()` that I can repeatedly use to print rows of data in a readable way. In addition, when I use this function, I'll have the option to output the number of rows and columns in the data set. After I define this function, I'll print the columns (header row) of the data set to understand what each data point represents. Lastly, I'll use the function to investigate a small selection of the data."
+    "Next, to make the data set easier to explore, I'll create a function named `explore_data()` that I can repeatedly use to print rows of data in a readable way. In addition, when I use this function, I'll have the option to output the number of rows and columns in the data set. After I define this function, I'll print the columns of the data set to understand what the data points represent. Lastly, I'll use this function to investigate a small selection of the data."
    ]
   },
   {
@@ -115,7 +115,7 @@
     "\n",
     "## Extracting Ask HN and Show HN Posts\n",
     "\n",
-    "Now, I'm ready to filter the data. Since I'm only concerned with post titles beginning with Ask HN or Show HN, I'll create sub data sets containing just the data for those titles."
+    "Now, I'm ready to filter the data. Since I'm only concerned with post titles beginning with \"Ask HN\" or \"Show HN\" (including case variations of the two), I'll create sub data sets containing just the data for those titles."
    ]
   },
   {
@@ -257,7 +257,7 @@
     "avg_ask_comments = total_ask_comments / len(ask_posts)\n",
     "avg_show_comments = total_show_comments / len(show_posts)\n",
     "\n",
-    "print(\"Average Ask HN comments per post:\", round(avg_ask_comments))\n",
+    "print(\"Average Ask HN comments per post:\", round(avg_ask_comments)) # Round average to the ones place for readability\n",
     "print(\"Average Show HN comments per post:\", round(avg_show_comments))"
    ]
   },
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see in the output above, Ask HN posts receive more comments on average by five, while Show HN posts only receive five comments.\n",
+    "As you can see in the output above, Ask HN posts receive five more comments on average than Show HN posts.\n",
     "\n",
     "Since ask posts are more likely to receive comments, I'll focus my remaining analysis just on these posts.\n",
     "\n",
@@ -367,7 +367,7 @@
     "    \n",
     "    avg_by_hour.append([hour, avg_n_comments])\n",
     "    \n",
-    "template = \"Average number of comments per post at {hour}:00: {avg_n_comments:.2f}\" # Round average for readability\n",
+    "template = \"Average number of comments per post at {hour}:00: {avg_n_comments:.2f}\" # Round average to two decimal places for readability\n",
     "\n",
     "for avg in avg_by_hour:\n",
     "    hour = avg[0]\n",
@@ -382,7 +382,7 @@
    "source": [
     "## Sorting and Printing Values from a List of Lists\n",
     "\n",
-    "Although the results I need are now there, this format makes it hard to identify the hours with the highest values. I'll finish the analysis by sorting the list of lists and printing the five highest values in a format that's easier to read."
+    "Although the results I need are now there, this format makes it hard to identify the hours with the highest values. I'll finish the analysis by sorting the list of lists (the collection of each hour and its corresponding average number of comments) and printing the five highest values in a format that's easier to read."
    ]
   },
   {
@@ -417,11 +417,11 @@
     "\n",
     "print(\"Top 5 Hours for Ask Posts Comments:\\n\")\n",
     "\n",
-    "template = \"{hour}:00: {avg_n_comments:.2f} average comments per post\" # Round average for readability\n",
+    "template = \"{hour}:00: {avg_n_comments:.2f} average comments per post\" # Round average to two decimal places for readability\n",
     "\n",
-    "for sorted_avg in sorted_swap[:5]:\n",
-    "    hour = sorted_avg[1]\n",
-    "    avg_n_comments = sorted_avg[0]\n",
+    "for avg in sorted_swap[:5]:\n",
+    "    hour = avg[1]\n",
+    "    avg_n_comments = avg[0]\n",
     "    \n",
     "    print(template.format(hour=hour, avg_n_comments=avg_n_comments))"
    ]
@@ -430,22 +430,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the output above presents, the best hour for creating a post and having the highest chance of receiving comments is 3:00 in the afternoon. Of course, posting at 1:00 in the afternoon and at 12:00 p.m. are also great hours for having a higher chance at receiving comments.\n",
+    "As the output above presents, the best hour for creating a post and having the highest chance of receiving comments is 3:00 in the afternoon. Of course, posting at 1:00 p.m. or 12:00 p.m. will also give you a higher chance at receiving comments.\n",
     "\n",
-    "However, the time zone for these hours (as well as the rest of the time data in the data set) is U.S. Eastern Time; if you happen to live in a region of the globe that does not pertain to this specific time zone, you can find out what these hours are in your time zone using [The Time Zone Converter](https://www.thetimezoneconverter.com/).\n",
+    "However, the time zone for these hours (as well as the rest of the time data in the data set) is Eastern Standard Time; if you happen to live in a region of the globe that does not pertain to this specific time zone, you can find out what these hours are in your time zone using [The Time Zone Converter](https://www.thetimezoneconverter.com/).\n",
     "\n",
-    "For example, my time zone is Mountain Standard Time; U.S. Eastern Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) is the best hour of the day for me to create posts in hopes of collecting the most amount of comments.\n",
+    "For example, my time zone is Mountain Standard Time; Eastern Standard Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) is the best hour of the day for me to create posts in hopes of collecting the most amount of comments.\n",
     "\n",
     "## Conclusion\n",
     "\n",
-    "In this project, I managed a data set with thousands of records of posts to Hacker News.\n",
+    "Throughout the whole of this project, I managed and manipulated a data set with thousands of records of posts to Hacker News.\n",
     "\n",
     "My goal was to analyze the data to answer the following questions:\n",
     "\n",
     "- Do Ask HN or Show HN posts receive more comments on average?\n",
     "- Do posts created at a certain time receive more comments on average?\n",
     "\n",
-    "In conclusion, I discovered that Ask HN posts receive more comments on average. Additionally, I found that posts created at 3:00 p.m., 1:00 p.m., and 12:00 p.m. (in that order) receive the most comments on average. However, these times apply specifically to U.S. Eastern Time. In result, these hours may be different depending on what time zone you live in."
+    "In conclusion, I discovered that Ask HN posts receive more comments on average. Additionally, I found that posts created at 3:00 p.m., 1:00 p.m., and 12:00 p.m. respectively receive the most comments on average. However, these times apply specifically to Eastern Standard Time. In result, these hours may be different depending on what time zone you live in."
    ]
   }
  ],
