--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -12,10 +12,18 @@
     "\n",
     "I'm specifically interested in posts whose titles begin with either **Ask HN** or **Show HN**. Users submit Ask HN posts to ask the Hacker News community a specific question; users submit Show HN posts to show the Hacker News community a project, product, or just generally something interesting.\n",
     "\n",
-    "I'll compare these two types of posts to determine the following:\n",
+    "My goal is to compare these two types of posts to determine the following:\n",
     "\n",
     "- Do Ask HN or Show HN posts receive more comments on average?\n",
+    "\n",
+    "\n",
     "- Do posts created at a certain time receive more comments on average?\n",
+    "\n",
+    "\n",
+    "- Do Ask HN or Show HN posts receive more points on average?\n",
+    "\n",
+    "\n",
+    "- Do posts created at a certain time receive more points on average?\n",
     "\n",
     "## Opening and Exploring the Data\n",
     "\n",
@@ -144,9 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculating the Average Number of Comments for Ask HN and Show HN Posts\n",
-    "\n",
-    "With the Ask HN, Show HN, and other posts separated, I'll explore the first five rows of each list to get a good sense of them and find out exactly how many posts are in each one."
+    "Finally, with the Ask HN, Show HN, and other posts separated, I'll explore the first five rows of each list to get a good sense of them and find out exactly how many posts are in each one."
    ]
   },
   {
@@ -223,7 +229,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, I'll determine if ask posts or show posts receive more comments on average."
+    "## Part 1: Analyzing the Number of Comments for Ask HN and Show HN Posts\n",
+    "\n",
+    "In this first analysis, I'll complete the first half of my goal by taking a look at the comments of the Ask HN and Show HN posts in the data set to answer these questions:\n",
+    "\n",
+    "- Do Ask HN or Show HN posts receive more comments on average?\n",
+    "\n",
+    "- Do posts created at a certain time receive more comments on average?\n",
+    "\n",
+    "### Calculating the Average Number of Comments\n",
+    "\n",
+    "Firstly, I'll find out if ask posts or show posts receive more comments on average."
    ]
   },
   {
@@ -235,8 +251,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Ask HN comments per post: 10\n",
-      "Average Show HN comments per post: 5\n"
+      "Average number of comments per Ask HN post: 10\n",
+      "Average number of comments per Show HN post: 5\n"
      ]
     }
    ],
@@ -257,8 +273,8 @@
     "avg_ask_comments = total_ask_comments / len(ask_posts)\n",
     "avg_show_comments = total_show_comments / len(show_posts)\n",
     "\n",
-    "print(\"Average Ask HN comments per post:\", round(avg_ask_comments)) # Round average to the ones place for readability\n",
-    "print(\"Average Show HN comments per post:\", round(avg_show_comments))"
+    "print(\"Average number of comments per Ask HN post:\", round(avg_ask_comments)) # Round average to the ones place for readability\n",
+    "print(\"Average number of comments per Show HN post:\", round(avg_show_comments))"
    ]
   },
   {
@@ -269,7 +285,7 @@
     "\n",
     "Since ask posts are more likely to receive comments, I'll focus my remaining analysis just on these posts.\n",
     "\n",
-    "## Finding the Amount of Ask Posts and Comments by Hour Created\n",
+    "### Finding the Amount of Ask Posts and Comments by Hour Created\n",
     "\n",
     "Next, I'll determine if ask posts created at a certain time are more likely to attract comments. I'll use the following steps to perform this analysis:\n",
     "\n",
@@ -316,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculating the Average Number of Comments for Ask HN Posts by Hour\n",
+    "### Calculating the Average Number of Comments for Ask HN Posts by Hour\n",
     "\n",
     "Now that I've gathered the number of ask posts created during each hour of the day and the corresponding number of comments ask posts created at each hour received, I can calculate the average number of comments for posts created during each hour of the day.\n",
     "\n",
@@ -380,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sorting and Printing Values from a List of Lists\n",
+    "### Sorting and Printing Values from a List of Lists\n",
     "\n",
     "Although the results I need are now there, this format makes it hard to identify the hours with the highest values. I'll finish the analysis by sorting the list of lists (the collection of each hour and its corresponding average number of comments) and printing the five highest values in a format that's easier to read."
    ]
@@ -436,6 +452,67 @@
     "\n",
     "For example, my time zone is Mountain Standard Time; Eastern Standard Time is two hours ahead of my time zone, so 1:00 p.m. (not 3:00 p.m.) is the best hour of the day for me to create posts in hopes of collecting the most amount of comments.\n",
     "\n",
+    "## Part 2: Analyzing the Number of Points for Ask HN and Show HN Posts\n",
+    "\n",
+    "I've finished analyzing the number of comments ask posts and show posts gather. Now, I'll perform the same analysis, but this time I'll be working with the number of points ask posts and show posts receive. Using this data, I'll accomplish the second half of my goal by solving these problems:\n",
+    "\n",
+    "- Do Ask HN or Show HN posts receive more points on average?\n",
+    "\n",
+    "- Do posts created at a certain time receive more points on average?\n",
+    "\n",
+    "### Calculating the Average Number of Points\n",
+    "\n",
+    "I'll start this new analysis by using the `num_points` column (fourth column) of the Hacker News data set to find out if ask posts or show posts earn more points on average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of points per ask post: 11\n",
+      "Average number of points per show post: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_ask_points = 0\n",
+    "total_show_points = 0\n",
+    "\n",
+    "for row in ask_posts:\n",
+    "    n_points = int(row[3])\n",
+    "    \n",
+    "    total_ask_points += n_points\n",
+    "    \n",
+    "for row in show_posts:\n",
+    "    n_points = int(row[3])\n",
+    "    \n",
+    "    total_show_points += n_points\n",
+    "    \n",
+    "avg_ask_points = total_ask_points / len(ask_posts)\n",
+    "avg_show_points = total_show_points / len(show_posts)\n",
+    "\n",
+    "print(\"Average number of points per ask post:\", round(avg_ask_points)) # Round average to the ones place for readability\n",
+    "print(\"Average number of points per show post:\", round(avg_show_points))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the result of the code above, you can observe that an ask post gets 11 points on average, while a show post collects 15 points on average.\n",
+    "\n",
+    "Because the average amount of points each show post receives is higher than that of each ask post (by 4 to be exact), I'll concentrate on dealing with show posts for the rest of this analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion\n",
     "\n",
     "Throughout the whole of this project, I managed and manipulated a data set with thousands of records of posts to Hacker News.\n",
