--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -506,7 +506,39 @@
    "source": [
     "From the result of the code above, you can observe that an ask post gets 11 points on average, while a show post collects 15 points on average.\n",
     "\n",
-    "Because the average amount of points each show post receives is higher than that of each ask post (by 4 to be exact), I'll concentrate on dealing with show posts for the rest of this analysis."
+    "Because the average amount of points each show post receives is higher than that of each ask post (by 4 to be exact), I'll concentrate on dealing with show posts for the rest of this analysis.\n",
+    "\n",
+    "### Finding the Amount of Points in Show Posts by Hour Created\n",
+    "\n",
+    "In this step, I'll compute the number of points accumulated during each hour of the day show posts were created. Just like in the previous analysis, I'll be using the data in the `created_at` column to perform this task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_list = []\n",
+    "\n",
+    "for row in show_posts:\n",
+    "    created_at = row[6]\n",
+    "    n_points = int(row[4])\n",
+    "    \n",
+    "    result_list.append([created_at, n_points])\n",
+    "    \n",
+    "points_by_hour = {}\n",
+    "\n",
+    "for row in result_list:\n",
+    "    date = row[0]\n",
+    "    date = dt.datetime.strptime(date, \"%m/%d/%Y %H:%M\")\n",
+    "    hour = date.strftime(\"%H\")\n",
+    "    n_points = row[1]\n",
+    "    \n",
+    "    if hour not in points_by_hour:\n",
+    "        points_by_hour[hour] = n_points\n",
+    "    else:\n",
+    "        points_by_hour[hour] += n_points"
    ]
   },
   {
