--- a/exploring-hacker-news-posts.ipynb
+++ b/exploring-hacker-news-posts.ipynb
@@ -545,6 +545,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Calculating the Average Number of Points for Show HN Posts by Hour\n",
+    "\n",
+    "With each total amount of points collected by show posts throughout every hour of the day in place, I'm able to solve for the average number of points collected from show posts for each hour during the day (recall that I already have the quantity of posts created per hour of the day).\n",
+    "\n",
+    "Once I gather this information, I'll output the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of points per post at 00:00: 4.26\n",
+      "Average number of points per post at 23:00: 4.21\n",
+      "Average number of points per post at 20:00: 4.28\n",
+      "Average number of points per post at 19:00: 5.06\n",
+      "Average number of points per post at 18:00: 5.28\n",
+      "Average number of points per post at 16:00: 6.51\n",
+      "Average number of points per post at 14:00: 7.48\n",
+      "Average number of points per post at 10:00: 4.35\n",
+      "Average number of points per post at 09:00: 6.36\n",
+      "Average number of points per post at 08:00: 6.89\n",
+      "Average number of points per post at 06:00: 3.86\n",
+      "Average number of points per post at 03:00: 3.45\n",
+      "Average number of points per post at 21:00: 3.40\n",
+      "Average number of points per post at 17:00: 5.51\n",
+      "Average number of points per post at 15:00: 5.92\n",
+      "Average number of points per post at 11:00: 7.73\n",
+      "Average number of points per post at 07:00: 6.98\n",
+      "Average number of points per post at 04:00: 4.02\n",
+      "Average number of points per post at 13:00: 7.46\n",
+      "Average number of points per post at 12:00: 10.55\n",
+      "Average number of points per post at 01:00: 3.57\n",
+      "Average number of points per post at 22:00: 3.79\n",
+      "Average number of points per post at 02:00: 4.00\n",
+      "Average number of points per post at 05:00: 2.83\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_by_hour = []\n",
+    "\n",
+    "for hour in points_by_hour:\n",
+    "    avg_n_points = points_by_hour[hour] / counts_by_hour[hour]\n",
+    "    \n",
+    "    avg_by_hour.append([hour, avg_n_points])\n",
+    "    \n",
+    "template = \"Average number of points per post at {hour}:00: {avg_n_points:.2f}\" # Round average to two decimal places for readability\n",
+    "    \n",
+    "for avg in avg_by_hour:\n",
+    "    hour = avg[0]\n",
+    "    avg_n_points = avg[1]\n",
+    "    \n",
+    "    print(template.format(hour=hour, avg_n_points=avg_n_points))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion\n",
     "\n",
     "Throughout the whole of this project, I managed and manipulated a data set with thousands of records of posts to Hacker News.\n",
